[package]
name = "cosmrs"
version = "0.15.0"
authors = ["Tony Arcieri <tony@iqlusion.io>"]
license = "Apache-2.0"
repository = "https://github.com/cosmos/cosmos-rust/tree/main/cosmrs"
description = "Transaction builder and signer for Cosmos-based blockchains"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "encoding"]
keywords = ["blockchain", "cosmos", "tendermint", "transaction"]
edition = "2021"
rust-version = "1.72"

[dependencies]
cosmos-sdk-proto = { version = "0.20", default-features = false, path = "../cosmos-sdk-proto" }
eyre = "0.6"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
tendermint = { version = "0.34", default-features = false, features = [] }
thiserror = "1"

[dev-dependencies]
hex-literal = "0.4"

[features]
default   = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
